[gd_scene load_steps=9 format=3 uid="uid://basyo0xq4cdpj"]

[ext_resource type="Script" uid="uid://dbfanmqkl2voy" path="res://scripts/main_menu/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://c8pc6peyu2e1l" path="res://images/main_menu/background.jpg" id="2_rtw2f"]
[ext_resource type="Texture2D" uid="uid://trecm7sagipa" path="res://images/main_menu/title.png" id="3_oa1go"]
[ext_resource type="Script" uid="uid://dm85b24ojopkt" path="res://scripts/main_menu/logo.gd" id="4_tbmy8"]
[ext_resource type="Texture2D" uid="uid://cvyi7cmviwyb2" path="res://images/main_menu/pixil-frame-0.png" id="5_jk1qb"]
[ext_resource type="FontFile" uid="uid://cwn34f5aeghxs" path="res://fonts/PressStart2P-Regular.ttf" id="6_rtw2f"]
[ext_resource type="AudioStream" uid="uid://bdccdq83nhmj8" path="res://musics/space_music.ogg" id="7_oa1go"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("2_rtw2f")
modulate_color = Color(0.35906908, 0.35906908, 0.35906908, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.0
offset_top = 96.0
offset_right = 206.0
offset_bottom = 325.0
grow_horizontal = 2
texture = ExtResource("3_oa1go")
script = ExtResource("4_tbmy8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.453
anchor_top = 0.554
anchor_right = 0.57900006
anchor_bottom = 0.832
offset_left = 0.14398193
offset_top = 0.007965088
offset_right = 1930.992
offset_bottom = 2390.864
scale = Vector2(0.07, 0.07)
theme_override_constants/separation = 150

[node name="FullGameButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
<<<<<<< Updated upstream
texture_normal = ExtResource("5_jk1qb")
=======
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_rtw2f")
>>>>>>> Stashed changes

[node name="Label" type="Label" parent="VBoxContainer/FullGameButton"]
layout_mode = 0
offset_left = -0.00041770935
offset_top = 0.00036621094
offset_right = 2071.4282
offset_bottom = 757.14343
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 250
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
<<<<<<< Updated upstream
texture_normal = ExtResource("5_jk1qb")
=======
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_rtw2f")
>>>>>>> Stashed changes

[node name="Label" type="Label" parent="VBoxContainer/ExitButton"]
layout_mode = 0
offset_left = -0.00041770935
offset_top = 0.00036621094
offset_right = 2071.4282
offset_bottom = 757.14343
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 250
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="APIRequest" type="HTTPRequest" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_oa1go")
volume_db = -10.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/FullGameButton" to="." method="_on_full_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
